--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+body, p{
     color: #363636;
     box-sizing: border-box;
     font-family: 'lato', sans-serif;
@@ -17,13 +17,13 @@ header {
 #logo {
     width: 50%;
     display: flex;
+    object-fit: contain;
 }
 
 
 #logotipo {
     height: 100px;
-    max-width: 100%;
-    max-height: 100%;
+    object-fit: fill;
 }
 
 .nav-links {
@@ -89,4 +89,39 @@ a {
     font-size: 1.1em;
     font-weight: bolder;
     cursor: pointer;
+}
+
+.conteiner {
+    max-width: 900px;
+    margin: 0 auto;
+    align-content: center;
+}
+
+.grid {
+    display: flex;
+    margin: auto 0 20px 1em;
+}
+
+i {
+    display: block;
+    margin: auto 0;
+    min-width: 70px;
+    text-align: center;
+}
+
+.icon {
+    margin: auto;
+    /*height: 50px;*/
+    /*width: 50px;*/
+    object-fit: fill;
+    max-width: 70px;
+    max-height: 70px;
+
+}
+
+.video {
+    margin-top: 110px;
+    display: block;
+    text-align: center;
+    width: 100%;
 }
