--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ iframe {
 .pricing {
     margin-top: 110px;
     display: flex;
+    /*flex-direction: column;*/
     justify-content: space-between;
 }
 
@@ -175,6 +176,37 @@ iframe {
     font-weight: lighter;
 }
 
+@media (max-width: 420px) {
+    header {
+    display: block;
+    flex-direction: column;
+    /*background-color: antiquewhite;*/
+    /*flex-wrap: nowrap;*/
+    /*height: fit-content;*/
+        
+    }
+
+    #logo {
+    width: 100%;
+    height: 200px;
+    /*border: solid 5px red;*/
+    display: flex;
+    /*object-fit: contain;*/
+    }
+    
+    #logotipo {
+        display: block;
+        /*border: solid 5px blue;*/
+        margin: auto;
+        max-height: 100%;
+        /*min-height: auto;*/
+        max-width: 90%;
+        width: 90%;
+        height: auto;
+        object-fit: contain;
+    }
+}
+
 @media (max-width: 865px) {
     #links--list {
         flex-direction: column;
@@ -190,13 +222,17 @@ iframe {
         padding: 7px;
     }
 
-    .pacote {
-        font-size: 12pt;
+    .pricing {
+    margin-top: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     }
 
-    #logotipo {
-        height: 120px;
-        object-fit: fill;
+    .pacote {
+        /*font-size: 12pt;*/
+        width: 50%;
+        margin: 20px auto;
     }
     
 }
